--- a/index.html
+++ b/index.html
@@ -38,10 +38,24 @@
     <body>
         <div class="header">
             <h1>⚡ Unmissable Deals</h1>
-            <div class="status">Last Updated: 22:09 PM</div>
+            <div class="status">Last Updated: 22:17 PM</div>
         </div>
         <div class="container">
     
+        <div class="card">
+            <div class="thumb"><img src="https://m.media-amazon.com/images/I/51AtZlLSQpL._SY300_SX300_QL70_ML2_.jpg" loading="lazy"></div>
+            <div class="info">
+                <span class="site-tag">Amazon</span>
+                <div class="title">Amazon Brand - Solimo Plastic Storage Jar and Container Set I Air Tight & BPA Free Containers For Kitchen Storage Set I Grocery Kitchen Container Set I Multipurpose Jar, 900 Ml Each, Set 6, Black</div>
+                <div class="price-row">
+                    <span class="price">₹277</span>
+                    <span class="mrp">₹4629</span>
+                    <span class="off">94% OFF</span>
+                </div>
+                <a href="https://www.amazon.in/dp/B0BDRK12JK?tag=unmissabled03-21" class="btn" target="_blank">Buy Now</a>
+            </div>
+        </div>
+        
         <div class="card">
             <div class="thumb"><img src="https://m.media-amazon.com/images/I/41iiQeW7n2L._SY300_SX300_QL70_ML2_.jpg" loading="lazy"></div>
             <div class="info">
