--- a/index.html
+++ b/index.html
@@ -38,10 +38,24 @@
     <body>
         <div class="header">
             <h1>⚡ Unmissable Deals</h1>
-            <div class="status">Last Updated: 22:17 PM</div>
+            <div class="status">Last Updated: 22:27 PM</div>
         </div>
         <div class="container">
     
+        <div class="card">
+            <div class="thumb"><img src="https://m.media-amazon.com/images/I/31x2yL135kL._SX300_SY300_QL70_ML2_.jpg" loading="lazy"></div>
+            <div class="info">
+                <span class="site-tag">Amazon</span>
+                <div class="title">Amazon Brand - Solimo Borosilicate Glass Mix Bowl (3600 ML) | Transparent</div>
+                <div class="price-row">
+                    <span class="price">₹316</span>
+                    <span class="mrp">₹1199</span>
+                    <span class="off">73% OFF</span>
+                </div>
+                <a href="https://www.amazon.in/dp/B07P8KPQJS?tag=unmissabled03-21" class="btn" target="_blank">Buy Now</a>
+            </div>
+        </div>
+        
         <div class="card">
             <div class="thumb"><img src="https://m.media-amazon.com/images/I/51AtZlLSQpL._SY300_SX300_QL70_ML2_.jpg" loading="lazy"></div>
             <div class="info">
