--- a/index.html
+++ b/index.html
@@ -38,10 +38,24 @@
     <body>
         <div class="header">
             <h1>⚡ Unmissable Deals</h1>
-            <div class="status">Last Updated: 22:31 PM</div>
+            <div class="status">Last Updated: 22:36 PM</div>
         </div>
         <div class="container">
     
+        <div class="card">
+            <div class="thumb"><img src="https://m.media-amazon.com/images/I/31grIDbFQ0L._SY300_SX300_QL70_ML2_.jpg" loading="lazy"></div>
+            <div class="info">
+                <span class="site-tag">Amazon</span>
+                <div class="title">Butterfly Xeno 750W Mixer Grinder | 3 Eastman Tritan Jars (Baby Safe-FDA Approved) | Vortex Blade+Square Jars-Efficient Grinding | Secure Jar Lock | Torx21 Motor | 5 Yr Warranty</div>
+                <div class="price-row">
+                    <span class="price">₹4486</span>
+                    <span class="mrp">₹7999</span>
+                    <span class="off">43% OFF</span>
+                </div>
+                <a href="https://www.amazon.in/dp/B0F8HYSZSF?tag=unmissabled03-21" class="btn" target="_blank">Buy Now</a>
+            </div>
+        </div>
+        
         <div class="card">
             <div class="thumb"><img src="https://m.media-amazon.com/images/I/31x2yL135kL._SX300_SY300_QL70_ML2_.jpg" loading="lazy"></div>
             <div class="info">
