--- a/index.html
+++ b/index.html
@@ -38,10 +38,24 @@
     <body>
         <div class="header">
             <h1>⚡ Unmissable Deals</h1>
-            <div class="status">Last Updated: 22:41 PM</div>
+            <div class="status">Last Updated: 22:42 PM</div>
         </div>
         <div class="container">
     
+        <div class="card">
+            <div class="thumb"><img src="https://m.media-amazon.com/images/I/41Fw7LsaPML._SY300_SX300_QL70_ML2_.jpg" loading="lazy"></div>
+            <div class="info">
+                <span class="site-tag">Amazon</span>
+                <div class="title">boAt Rockerz 558 Bluetooth Wireless Over Ear Headphones with Mic Upto 20 Hours Playback, 50MM Drivers, Soft Padded Ear Cushions and Physical Noise Isolation(Army Green)</div>
+                <div class="price-row">
+                    <span class="price">₹999</span>
+                    <span class="mrp">₹4999</span>
+                    <span class="off">80% OFF</span>
+                </div>
+                <a href="https://www.amazon.in/dp/B0BVRGZ9FV?tag=unmissabled03-21" class="btn" target="_blank">Buy Now</a>
+            </div>
+        </div>
+        
         <div class="card">
             <div class="thumb"><img src="https://m.media-amazon.com/images/I/31grIDbFQ0L._SY300_SX300_QL70_ML2_.jpg" loading="lazy"></div>
             <div class="info">
