--- a/index.html
+++ b/index.html
@@ -38,10 +38,24 @@
     <body>
         <div class="header">
             <h1>⚡ Unmissable Deals</h1>
-            <div class="status">Last Updated: 22:42 PM</div>
+            <div class="status">Last Updated: 23:08 PM</div>
         </div>
         <div class="container">
     
+        <div class="card">
+            <div class="thumb"><img src="https://m.media-amazon.com/images/I/31N4aAE9SRL._SY445_SX342_QL70_ML2_.jpg" loading="lazy"></div>
+            <div class="info">
+                <span class="site-tag">Amazon</span>
+                <div class="title">Tokyo Talkies Women's Elegant A-Line Dress with Belt & Pleated Dress, Sophisticated Full-Sleeve Style for Any Occasion</div>
+                <div class="price-row">
+                    <span class="price">₹183</span>
+                    <span class="mrp">₹1299</span>
+                    <span class="off">85% OFF</span>
+                </div>
+                <a href="https://www.amazon.in/dp/B0F4K76XPD?tag=unmissabled03-21" class="btn" target="_blank">Buy Now</a>
+            </div>
+        </div>
+        
         <div class="card">
             <div class="thumb"><img src="https://m.media-amazon.com/images/I/41Fw7LsaPML._SY300_SX300_QL70_ML2_.jpg" loading="lazy"></div>
             <div class="info">
