--- a/index.html
+++ b/index.html
@@ -38,10 +38,24 @@
     <body>
         <div class="header">
             <h1>⚡ Unmissable Deals</h1>
-            <div class="status">Last Updated: 23:18 PM</div>
+            <div class="status">Last Updated: 23:20 PM</div>
         </div>
         <div class="container">
     
+        <div class="card">
+            <div class="thumb"><img src="https://m.media-amazon.com/images/I/31iIvGI-KHL._SY300_SX300_QL70_ML2_.jpg" loading="lazy"></div>
+            <div class="info">
+                <span class="site-tag">Amazon</span>
+                <div class="title">POLYCAB Wizzy Neo LED 1200mm 5-Star BLDC, Remote Ceiling fan for Living Room | 8 Purple LED Speed Indicator | High Air Delivery, 25 Speed Control,Free Installation | 4-yr Warranty【White Rose Gold】</div>
+                <div class="price-row">
+                    <span class="price">₹2789</span>
+                    <span class="mrp">₹7699</span>
+                    <span class="off">63% OFF</span>
+                </div>
+                <a href="https://www.amazon.in/dp/B0DRYV8PLY?tag=unmissabled03-21" class="btn" target="_blank">Buy Now</a>
+            </div>
+        </div>
+        
         <div class="card">
             <div class="thumb"><img src="https://m.media-amazon.com/images/I/31EHfUAsPBL._SY300_SX300_QL70_ML2_.jpg" loading="lazy"></div>
             <div class="info">
