--- a/index.html
+++ b/index.html
@@ -38,10 +38,24 @@
     <body>
         <div class="header">
             <h1>⚡ Unmissable Deals</h1>
-            <div class="status">Last Updated: 23:20 PM</div>
+            <div class="status">Last Updated: 23:38 PM</div>
         </div>
         <div class="container">
     
+        <div class="card">
+            <div class="thumb"><img src="https://m.media-amazon.com/images/I/41JozzuF3XL._SY300_SX300_QL70_ML2_.jpg" loading="lazy"></div>
+            <div class="info">
+                <span class="site-tag">Amazon</span>
+                <div class="title">TVS XPOD Aerodynamic Helmet for Men-ISI DOT Certified, Ultrawide Visor, Quick Release Strap-Premium Bike Helmet with Enhanced Air Circulation</div>
+                <div class="price-row">
+                    <span class="price">₹1815</span>
+                    <span class="mrp">₹239900</span>
+                    <span class="off">99% OFF</span>
+                </div>
+                <a href="https://www.amazon.in/dp/B08P2X2VKZ?tag=unmissabled03-21" class="btn" target="_blank">Buy Now</a>
+            </div>
+        </div>
+        
         <div class="card">
             <div class="thumb"><img src="https://m.media-amazon.com/images/I/31iIvGI-KHL._SY300_SX300_QL70_ML2_.jpg" loading="lazy"></div>
             <div class="info">
