--- a/index.html
+++ b/index.html
@@ -38,10 +38,24 @@
     <body>
         <div class="header">
             <h1>⚡ Unmissable Deals</h1>
-            <div class="status">Last Updated: 23:38 PM</div>
+            <div class="status">Last Updated: 23:43 PM</div>
         </div>
         <div class="container">
     
+        <div class="card">
+            <div class="thumb"><img src="https://m.media-amazon.com/images/I/41HlCEf3ESL._SY300_SX300_QL70_ML2_.jpg" loading="lazy"></div>
+            <div class="info">
+                <span class="site-tag">Amazon</span>
+                <div class="title">GIGABYTE GV-N506TWF2OC-8GD | GeForce RTX 5060 Ti WINDFORCE 2X OC 8GB GDDR6 Graphics Card</div>
+                <div class="price-row">
+                    <span class="price">₹40557</span>
+                    <span class="mrp">₹155750</span>
+                    <span class="off">73% OFF</span>
+                </div>
+                <a href="https://www.amazon.in/dp/B0F4ZFPVC1?tag=unmissabled03-21" class="btn" target="_blank">Buy Now</a>
+            </div>
+        </div>
+        
         <div class="card">
             <div class="thumb"><img src="https://m.media-amazon.com/images/I/41JozzuF3XL._SY300_SX300_QL70_ML2_.jpg" loading="lazy"></div>
             <div class="info">
