--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
     <div style="text-align:center; margin-bottom:20px; color:#555;">⚡ Last Update: 00:09</div>
     
         <div class="card">
+            <div class="thumb"><img src="https://m.media-amazon.com/images/I/51Dgkt97b7L._SY300_SX300_QL70_ML2_.jpg"></div>
+            <div class="info">
+                <div class="title">Dabur Red Gel Ayurvedic Toothpaste - 600g (150g x 4) | Reduction in Bad Breath, Plaque & Gingivitis | Freshness with Protection | For Healthy Gums & Effective Dental Care</div>
+                <div><span class="price">₹199</span> <span class="mrp">₹3317</span></div>
+                
+                <a href="https://www.amazon.in/dp/B0F4R4BG5G?tag=unmissabled03-21" class="btn amz-btn" target="_blank">Buy Now</a>
+            </div>
+        </div>
+        <div class="card">
             <div class="thumb"><img src="https://m.media-amazon.com/images/I/31l0V473zLL._SX342_SY445_QL70_ML2_.jpg"></div>
             <div class="info">
                 <div class="title">Bosch Professional Circular Saw Blade For Wood 12"/ 305Mm Dia, 30Mm Bore, 120 Teeth, Pack of 1</div>
