--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
     <div style="text-align:center; margin-bottom:20px; color:#555;">⚡ Last Update: 00:09</div>
     
         <div class="card">
+            <div class="thumb"><img src="https://m.media-amazon.com/images/I/41FhcVC+IAL._SY300_SX300_QL70_ML2_.jpg"></div>
+            <div class="info">
+                <div class="title">DABUR Herb'L Activated Charcoal Toothpaste-240G (120Gx2,Pack Of 2)|Black Gel Toothpaste|Whitening |Fluoride Free|Fights Plaque&Extrinsic Stains|With Power Of Mint|Cool&Refreshing Mouth Experience</div>
+                <div><span class="price">₹128</span> <span class="mrp">₹5333</span></div>
+                
+                <a href="https://www.amazon.in/dp/B0BQC6B15R?tag=unmissabled03-21" class="btn amz-btn" target="_blank">Buy Now</a>
+            </div>
+        </div>
+        <div class="card">
             <div class="thumb"><img src="https://m.media-amazon.com/images/I/51Dgkt97b7L._SY300_SX300_QL70_ML2_.jpg"></div>
             <div class="info">
                 <div class="title">Dabur Red Gel Ayurvedic Toothpaste - 600g (150g x 4) | Reduction in Bad Breath, Plaque & Gingivitis | Freshness with Protection | For Healthy Gums & Effective Dental Care</div>
