--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
     <div style="text-align:center; margin-bottom:20px; color:#555;">⚡ Last Update: 00:10</div>
     
         <div class="card">
+            <div class="thumb"><img src="https://m.media-amazon.com/images/I/41d7+CK7YTL._SY300_SX300_QL70_ML2_.jpg"></div>
+            <div class="info">
+                <div class="title">RR Signature TORRID QUARTZ Room Heater 800 Watt | Low Power Consumption | Tip-Over Protection | 2 Heating Rods for Quick Heating | Cool Touch Body | 2 Year Warranty</div>
+                <div><span class="price">₹899</span> <span class="mrp">₹2499</span></div>
+                
+                <a href="https://www.amazon.in/dp/B0DR2S3VPN?tag=unmissabled03-21" class="btn amz-btn" target="_blank">Buy Now</a>
+            </div>
+        </div>
+        <div class="card">
             <div class="thumb"><img src="https://m.media-amazon.com/images/I/31+5DiPFF6L._SY300_SX300_QL70_ML2_.jpg"></div>
             <div class="info">
                 <div class="title">Solimo Beer Glass Set (6 pieces, 295ml)</div>
