--- a/index.html
+++ b/index.html
@@ -15,8 +15,17 @@
         .btn { display: block; background: #2874f0; color: white; text-align: center; padding: 8px; border-radius: 5px; text-decoration: none; margin-top: 10px; font-weight: 600; }
         .amz-btn { background: #ff9900; }
     </style></head><body>
-    <div style="text-align:center; margin-bottom:20px; color:#555;">⚡ Last Update: 00:10</div>
+    <div style="text-align:center; margin-bottom:20px; color:#555;">⚡ Last Update: 00:15</div>
     
+        <div class="card">
+            <div class="thumb"><img src="https://m.media-amazon.com/images/I/41KD2pHkS6L._SX342_SY445_QL70_ML2_.jpg"></div>
+            <div class="info">
+                <div class="title">DR. FIXIT 201 Crack X Paste-1Kg, Ready to Use Filler for Internal & External Surface Cracks on Roofs, Walls - Flexible Putty With Excellent Bonding - Pack of 12, Acrylic</div>
+                <div><span class="price">₹2016</span> <span class="mrp">₹1680</span></div>
+                
+                <a href="https://www.amazon.in/dp/B0DCJNDT6K?tag=unmissabled03-21" class="btn amz-btn" target="_blank">Buy Now</a>
+            </div>
+        </div>
         <div class="card">
             <div class="thumb"><img src="https://m.media-amazon.com/images/I/41d7+CK7YTL._SY300_SX300_QL70_ML2_.jpg"></div>
             <div class="info">
