--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
     <div style="text-align:center; margin-bottom:20px; color:#555;">⚡ Last Update: 00:17</div>
     
         <div class="card">
+            <div class="thumb"><img src="https://m.media-amazon.com/images/I/51fDGAgtKzL._SY300_SX300_QL70_ML2_.jpg"></div>
+            <div class="info">
+                <div class="title">Bikano Bombay Mixture | Spicy & Tangy Indian Namkeen Snack | Crunchy Blend of Sev, Peanuts & Spices | Tea-Time Snack – 800g</div>
+                <div><span class="price">₹144</span> <span class="mrp">₹1800</span></div>
+                
+                <a href="https://www.amazon.in/dp/B0F9T81MSB?tag=unmissabled03-21" class="btn amz-btn" target="_blank">Buy Now</a>
+            </div>
+        </div>
+        <div class="card">
             <div class="thumb"><img src="https://m.media-amazon.com/images/I/41RbSTqOc+L._SY300_SX300_QL70_ML2_.jpg"></div>
             <div class="info">
                 <div class="title">Bikano Teekha Mixture | Spicy Indian Namkeen Snack | Crunchy Mix with Peanuts, Corn Flakes & Spices | Perfect Tea-Time Snack (Spicy Mixture) - 800g</div>
