--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
     <div style="text-align:center; margin-bottom:20px; color:#555;">⚡ Last Update: 00:38</div>
     
         <div class="card">
+            <div class="thumb"><img src="https://m.media-amazon.com/images/I/3162roNX0yL._SX300_SY300_QL70_ML2_.jpg"></div>
+            <div class="info">
+                <div class="title">PNG Jewellers 2 gm Vedhani Gold coin 24 kt (995)</div>
+                <div><span class="price">₹28274</span> <span class="mrp">₹29405</span></div>
+                
+                <a href="https://www.amazon.in/dp/B0BYKSXHYK?tag=unmissabled03-21" class="btn amz" target="_blank">Buy on Amazon</a>
+            </div>
+        </div>
+        <div class="card">
             <div class="thumb"><img src="https://m.media-amazon.com/images/I/412tWAfEQAL._SY300_SX300_QL70_ML2_.jpg"></div>
             <div class="info">
                 <div class="title">TE-A-ME Elaichi Teabags, Flavoured Chai, Black Tea, 50 gram | 25 Tea bags</div>
