--- a/index.html
+++ b/index.html
@@ -15,8 +15,17 @@
         .btn { display: block; background: #333; color: white; text-align: center; padding: 8px; border-radius: 5px; text-decoration: none; margin-top: 10px; font-weight: 600; }
         .amz { background: #ff9900; } .fk { background: #2874f0; } .myn { background: #ff3f6c; }
     </style></head><body>
-    <div style="text-align:center; margin-bottom:20px; color:#555;">⚡ Last Update: 00:38</div>
+    <div style="text-align:center; margin-bottom:20px; color:#555;">⚡ Last Update: 00:39</div>
     
+        <div class="card">
+            <div class="thumb"><img src="https://m.media-amazon.com/images/I/414l07ZXtwL._SY300_SX300_QL70_ML2_.jpg"></div>
+            <div class="info">
+                <div class="title">Fastrack Trendies Analog Black Dial Men's Watch-38058PP03/NP38058PP03</div>
+                <div><span class="price">₹1097</span> <span class="mrp">₹1995</span></div>
+                
+                <a href="https://www.amazon.in/dp/B08K9946WZ?tag=unmissabled03-21" class="btn amz" target="_blank">Buy on Amazon</a>
+            </div>
+        </div>
         <div class="card">
             <div class="thumb"><img src="https://m.media-amazon.com/images/I/4175fcOI8oL._SY300_SX300_QL70_ML2_.jpg"></div>
             <div class="info">
