--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
     <div style="text-align:center; margin-bottom:20px; color:#555;">⚡ Last Update: 00:39</div>
     
         <div class="card">
+            <div class="thumb"><img src="https://m.media-amazon.com/images/I/21LbVFPJJhL._SY300_SX300_QL70_ML2_.jpg"></div>
+            <div class="info">
+                <div class="title">Goldmedal Tizio 25 Liters Storage Water Heater (Geyser) With Titanium Glassline Coated Tank | BEE 5 Star Rating | Preset Thermal Cutout | Temperature Control Knob | 4 in 1 Safety Valve | (WHITE)</div>
+                <div><span class="price">₹6178</span> <span class="mrp">₹13270</span></div>
+                
+                <a href="https://www.amazon.in/dp/B0CQYJY7ZM?tag=unmissabled03-21" class="btn amz" target="_blank">Buy on Amazon</a>
+            </div>
+        </div>
+        <div class="card">
             <div class="thumb"><img src="https://m.media-amazon.com/images/I/414l07ZXtwL._SY300_SX300_QL70_ML2_.jpg"></div>
             <div class="info">
                 <div class="title">Fastrack Trendies Analog Black Dial Men's Watch-38058PP03/NP38058PP03</div>
