--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
     <div style="text-align:center; margin-bottom:20px; color:#555;">⚡ Last Update: 00:39</div>
     
         <div class="card">
+            <div class="thumb"><img src="https://m.media-amazon.com/images/I/41eiYkodiFL._SX300_SY300_QL70_ML2_.jpg"></div>
+            <div class="info">
+                <div class="title">Havells 9W LED Bulb for Home & Office |B22 LED Bulb Base |Cool Day White Light (6500K/4000k/3000k) |4Kv Surge Protection |High Voltage Protection |Eco Friendly Energy Efficient | Pack of 6</div>
+                <div><span class="price">₹319</span> <span class="mrp">₹5317</span></div>
+                
+                <a href="https://www.amazon.in/dp/B0DWX9VYXC?tag=unmissabled03-21" class="btn amz" target="_blank">Buy on Amazon</a>
+            </div>
+        </div>
+        <div class="card">
             <div class="thumb"><img src="https://m.media-amazon.com/images/I/21LbVFPJJhL._SY300_SX300_QL70_ML2_.jpg"></div>
             <div class="info">
                 <div class="title">Goldmedal Tizio 25 Liters Storage Water Heater (Geyser) With Titanium Glassline Coated Tank | BEE 5 Star Rating | Preset Thermal Cutout | Temperature Control Knob | 4 in 1 Safety Valve | (WHITE)</div>
