--- a/index.html
+++ b/index.html
@@ -15,8 +15,17 @@
         .btn { display: block; background: #333; color: white; text-align: center; padding: 8px; border-radius: 5px; text-decoration: none; margin-top: 10px; font-weight: 600; }
         .amz { background: #ff9900; } .fk { background: #2874f0; } .myn { background: #ff3f6c; }
     </style></head><body>
-    <div style="text-align:center; margin-bottom:20px; color:#555;">⚡ Last Update: 00:40</div>
+    <div style="text-align:center; margin-bottom:20px; color:#555;">⚡ Last Update: 00:47</div>
     
+        <div class="card">
+            <div class="thumb"><img src="https://constant.myntassets.com/www/data/portal/mlogo.png"></div>
+            <div class="info">
+                <div class="title">Myntra - Buy Myntra online in India</div>
+                <div><span class="price">₹2600</span> </div>
+                
+                <a href="https://inrdeals.com/esh416135721/https%3A//www.myntra.com/myntra" class="btn myn" target="_blank">Buy on Myntra</a>
+            </div>
+        </div>
         <div class="card">
             <div class="thumb"><img src="https://m.media-amazon.com/images/I/31zahzSHTtL._SY300_SX300_QL70_ML2_.jpg"></div>
             <div class="info">
