--- a/index.html
+++ b/index.html
@@ -15,8 +15,17 @@
         .btn { display: block; background: #333; color: white; text-align: center; padding: 8px; border-radius: 5px; text-decoration: none; margin-top: 10px; font-weight: 600; }
         .amz { background: #ff9900; } .fk { background: #2874f0; } .myn { background: #ff3f6c; }
     </style></head><body>
-    <div style="text-align:center; margin-bottom:20px; color:#555;">⚡ Last Update: 00:47</div>
+    <div style="text-align:center; margin-bottom:20px; color:#555;">⚡ Last Update: 00:51</div>
     
+        <div class="card">
+            <div class="thumb"><img src="https://assets.myntassets.com/h_720,q_90,w_540/v1/assets/images/416049/2019/10/23/b70ca2af-5e0b-457e-a65c-70f1ee98a7941571829338530-Fossil-Men-Watches-4721571829337309-1.jpg"></div>
+            <div class="info">
+                <div class="title">Men Black Analogue Watch JR1353 Fossil</div>
+                <div><span class="price">₹6398</span> <span class="mrp">₹15995</span></div>
+                
+                <a href="https://inrdeals.com/esh416135721/https%3A//www.myntra.com/watches/fossil/fossil-men-black-analogue-watch-jr1353/416049/buy" class="btn myn" target="_blank">Buy on Myntra</a>
+            </div>
+        </div>
         <div class="card">
             <div class="thumb"><img src="https://constant.myntassets.com/www/data/portal/mlogo.png"></div>
             <div class="info">
