--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
     <div style="text-align:center; margin-bottom:20px; color:#555;">⚡ Last Update: 00:51</div>
     
         <div class="card">
+            <div class="thumb"><img src="https://assets.myntassets.com/h_720,q_90,w_540/v1/assets/images/32413157/2025/7/24/99e9be68-a686-4d2f-9df5-6d382b96e62e1753364760974-Fossil-Men-Sullivan-Multi-Function-Analogue-Watch-BQ2857I-37-1.jpg"></div>
+            <div class="info">
+                <div class="title">Men Sullivan Multi Function Analogue Watch BQ2857I Fossil</div>
+                <div><span class="price">₹4873</span> <span class="mrp">₹12495</span></div>
+                
+                <a href="https://inrdeals.com/esh416135721/https%3A//www.myntra.com/watches/fossil/fossil-men-sullivan-multi-function-analogue-watch-bq2857i/32413157/buy" class="btn myn" target="_blank">Buy on Myntra</a>
+            </div>
+        </div>
+        <div class="card">
             <div class="thumb"><img src="https://assets.myntassets.com/h_720,q_90,w_540/v1/assets/images/416049/2019/10/23/b70ca2af-5e0b-457e-a65c-70f1ee98a7941571829338530-Fossil-Men-Watches-4721571829337309-1.jpg"></div>
             <div class="info">
                 <div class="title">Men Black Analogue Watch JR1353 Fossil</div>
