--- a/index.html
+++ b/index.html
@@ -15,8 +15,17 @@
         .btn { display: block; background: #333; color: white; text-align: center; padding: 8px; border-radius: 5px; text-decoration: none; margin-top: 10px; font-weight: 600; }
         .amz { background: #ff9900; } .fk { background: #2874f0; } .myn { background: #ff3f6c; }
     </style></head><body>
-    <div style="text-align:center; margin-bottom:20px; color:#555;">⚡ Last Update: 00:51</div>
+    <div style="text-align:center; margin-bottom:20px; color:#555;">⚡ Last Update: 00:52</div>
     
+        <div class="card">
+            <div class="thumb"><img src="https://assets.myntassets.com/h_720,q_90,w_540/v1/assets/images/2025/NOVEMBER/8/mVybHGpo_157887be1d3644f180942213318d7e5a.jpg"></div>
+            <div class="info">
+                <div class="title">Aloe Vera Daily Cleansing Wipes with Cucumber & Vitamin E - 25 Wipes Lacto Calamine</div>
+                <div><span class="price">₹150</span> </div>
+                
+                <a href="https://inrdeals.com/esh416135721/https%3A//www.myntra.com/s/k/c/31682016/buy" class="btn myn" target="_blank">Buy on Myntra</a>
+            </div>
+        </div>
         <div class="card">
             <div class="thumb"><img src="https://assets.myntassets.com/h_720,q_90,w_540/v1/assets/images/32413157/2025/7/24/99e9be68-a686-4d2f-9df5-6d382b96e62e1753364760974-Fossil-Men-Sullivan-Multi-Function-Analogue-Watch-BQ2857I-37-1.jpg"></div>
             <div class="info">
