--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
     <div style="text-align:center; margin-bottom:20px; color:#555;">⚡ Last Update: 00:52</div>
     
         <div class="card">
+            <div class="thumb"><img src="http://rukmini1.flixcart.com/image/300/300/xif0q/watch/s/z/p/-original-imahhx7ggy8ahq8b.jpeg"></div>
+            <div class="info">
+                <div class="title">TIMEX Pink Dial Analog Watch  - For Women - Buy TIMEX Pink Dial Analog Watch  - For Women TWTL10103 Online at Best Prices in India | Flipkart.com</div>
+                <div><span class="price">₹319</span> </div>
+                
+                <a href="https://inrdeals.com/esh416135721/https%3A//www.flipkart.com/a/p/itm9edc1c0f0408d" class="btn fk" target="_blank">Buy on Flipkart</a>
+            </div>
+        </div>
+        <div class="card">
             <div class="thumb"><img src="https://assets.myntassets.com/h_720,q_90,w_540/v1/assets/images/2025/NOVEMBER/8/mVybHGpo_157887be1d3644f180942213318d7e5a.jpg"></div>
             <div class="info">
                 <div class="title">Aloe Vera Daily Cleansing Wipes with Cucumber & Vitamin E - 25 Wipes Lacto Calamine</div>
