--- a/index.html
+++ b/index.html
@@ -15,8 +15,17 @@
         .btn { display: block; background: #333; color: white; text-align: center; padding: 8px; border-radius: 5px; text-decoration: none; margin-top: 10px; font-weight: 600; }
         .amz { background: #ff9900; } .fk { background: #2874f0; } .myn { background: #ff3f6c; }
     </style></head><body>
-    <div style="text-align:center; margin-bottom:20px; color:#555;">⚡ Last Update: 00:52</div>
+    <div style="text-align:center; margin-bottom:20px; color:#555;">⚡ Last Update: 00:53</div>
     
+        <div class="card">
+            <div class="thumb"><img src="http://rukmini1.flixcart.com/image/300/300/xif0q/hand-messenger-bag/t/z/q/-original-imah87422hbhpyzn.jpeg"></div>
+            <div class="info">
+                <div class="title">Buy Caprese Women Maroon Tote Maroon Online @ Best Price in India | Flipkart.com</div>
+                <div><span class="price">₹644</span> </div>
+                
+                <a href="https://inrdeals.com/esh416135721/https%3A//www.flipkart.com/a/p/itmf752766c05e8f" class="btn fk" target="_blank">Buy on Flipkart</a>
+            </div>
+        </div>
         <div class="card">
             <div class="thumb"><img src="http://rukmini1.flixcart.com/image/300/300/xif0q/watch/s/z/p/-original-imahhx7ggy8ahq8b.jpeg"></div>
             <div class="info">
