--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
     <div style="text-align:center; margin-bottom:20px; color:#555;">⚡ Last Update: 01:02</div>
     
         <div class="card">
+            <div class="thumb"><img src="https://assets.myntassets.com/h_200,w_200,c_fill,g_auto/h_1440,q_75,w_1080/v1/assets/images/30581624/2024/9/19/6faa1006-62d7-4822-b769-9ceaeb3c9c2c1726723419186-Olivia-Burton-Grosvenor-Qtz-Basic-Slim-Blush-Sunray-Square-D-1.jpg" onerror="this.src='https://via.placeholder.com/100?text=No+Img'"></div>
+            <div class="info">
+                <div class="title">Women Embellished Grosvenor Bracelet Style Square Dial Watch - 24000085 Olivia Burton</div>
+                <div><span class="price">₹3640</span> <span class="mrp">₹11375</span></div>
+                
+                <a href="https://inrdeals.com/link?id=esh416135721&url=https%3A//www.myntra.com/watches/olivia%2Bburton/olivia-burton-women-embellished-grosvenor-bracelet-style-square-dial-watch---24000085/30581624/buy" class="btn myn" target="_blank">Buy on Myntra</a>
+            </div>
+        </div>
+        <div class="card">
             <div class="thumb"><img src="https://assets.myntassets.com/h_200,w_200,c_fill,g_auto/h_1440,q_75,w_1080/v1/assets/images/2025/MAY/30/rfbbY5t6_16838b28fb344e53908114cafa7e1944.jpg" onerror="this.src='https://via.placeholder.com/100?text=No+Img'"></div>
             <div class="info">
                 <div class="title">Men Dial & Leather Straps Analogue Watch NN3205TL02 Fastrack</div>
