--- a/index.html
+++ b/index.html
@@ -15,8 +15,17 @@
         .btn { display: block; background: #333; color: white; text-align: center; padding: 8px; border-radius: 5px; text-decoration: none; margin-top: 10px; font-weight: 600; }
         .amz { background: #ff9900; } .fk { background: #2874f0; } .myn { background: #ff3f6c; }
     </style></head><body>
-    <div style="text-align:center; margin-bottom:20px; color:#555;">⚡ Last Update: 01:02</div>
+    <div style="text-align:center; margin-bottom:20px; color:#555;">⚡ Last Update: 01:03</div>
     
+        <div class="card">
+            <div class="thumb"><img src="https://assets.myntassets.com/h_200,w_200,c_fill,g_auto/h_1440,q_75,w_1080/v1/assets/images/24051924/2023/9/20/bd816196-8bb2-43bf-83c4-8b66929d15131695209590001CalvinKleinMenImpressiveStainlessSteelBraceletStyleAnalogueM1.jpg" onerror="this.src='https://via.placeholder.com/100?text=No+Img'"></div>
+            <div class="info">
+                <div class="title">Men Impressive Stainless Steel Bracelet Style Analogue Multi Watch 25200293 Calvin Klein</div>
+                <div><span class="price">₹4712</span> <span class="mrp">₹14280</span></div>
+                
+                <a href="https://inrdeals.com/link?id=esh416135721&url=https%3A//www.myntra.com/watches/calvin%2Bklein/calvin-klein-men-impressive-stainless-steel-bracelet-style-analogue-multi-watch-25200293/24051924/buy" class="btn myn" target="_blank">Buy on Myntra</a>
+            </div>
+        </div>
         <div class="card">
             <div class="thumb"><img src="https://assets.myntassets.com/h_200,w_200,c_fill,g_auto/h_1440,q_75,w_1080/v1/assets/images/30581624/2024/9/19/6faa1006-62d7-4822-b769-9ceaeb3c9c2c1726723419186-Olivia-Burton-Grosvenor-Qtz-Basic-Slim-Blush-Sunray-Square-D-1.jpg" onerror="this.src='https://via.placeholder.com/100?text=No+Img'"></div>
             <div class="info">
