--- a/index.html
+++ b/index.html
@@ -15,8 +15,17 @@
         .btn { display: block; background: #333; color: white; text-align: center; padding: 8px; border-radius: 5px; text-decoration: none; margin-top: 10px; font-weight: 600; }
         .amz { background: #ff9900; } .fk { background: #2874f0; } .myn { background: #ff3f6c; }
     </style></head><body>
-    <div style="text-align:center; margin-bottom:20px; color:#555;">⚡ Last Update: 01:03</div>
+    <div style="text-align:center; margin-bottom:20px; color:#555;">⚡ Last Update: 01:04</div>
     
+        <div class="card">
+            <div class="thumb"><img src="https://assets.myntassets.com/h_200,w_200,c_fill,g_auto/h_1440,q_75,w_1080/v1/assets/images/24051740/2023/10/6/ca9050cf-0c73-4371-ba11-252273aa1c3e1696592385705-Hugo-Boss--Solgrade-Analog-Black-Sunray-Round-Dial-Mens-Watc-1.jpg" onerror="this.src='https://via.placeholder.com/100?text=No+Img'"></div>
+            <div class="info">
+                <div class="title">Men Solgrade Analogue Watch 1514032 Hugo Boss</div>
+                <div><span class="price">₹9219</span> <span class="mrp">₹32925</span></div>
+                
+                <a href="https://inrdeals.com/link?id=esh416135721&url=https%3A//www.myntra.com/watches/hugo%2Bboss/hugo-boss-men-solgrade-analogue-watch-1514032/24051740/buy" class="btn myn" target="_blank">Buy on Myntra</a>
+            </div>
+        </div>
         <div class="card">
             <div class="thumb"><img src="https://assets.myntassets.com/h_200,w_200,c_fill,g_auto/h_1440,q_75,w_1080/v1/assets/images/1445926/2016/8/3/11470208412065-Sonata-Ocean-Series-Men-Green-Digital-Watch-77053PP02-3121470208411439-1.jpg" onerror="this.src='https://via.placeholder.com/100?text=No+Img'"></div>
             <div class="info">
