--- a/index.html
+++ b/index.html
@@ -15,8 +15,17 @@
         .btn { display: block; background: #333; color: white; text-align: center; padding: 8px; border-radius: 5px; text-decoration: none; margin-top: 10px; font-weight: 600; }
         .amz { background: #ff9900; } .fk { background: #2874f0; } .myn { background: #ff3f6c; }
     </style></head><body>
-    <div style="text-align:center; margin-bottom:20px; color:#555;">⚡ Last Update: 01:07</div>
+    <div style="text-align:center; margin-bottom:20px; color:#555;">⚡ Last Update: 01:08</div>
     
+        <div class="card">
+            <div class="thumb"><img src="https://assets.myntassets.com/h_200,w_200,c_fill,g_auto/h_1440,q_75,w_1080/v1/assets/images/30581624/2024/9/19/6faa1006-62d7-4822-b769-9ceaeb3c9c2c1726723419186-Olivia-Burton-Grosvenor-Qtz-Basic-Slim-Blush-Sunray-Square-D-1.jpg" onerror="this.src='https://via.placeholder.com/100?text=No+Img'"></div>
+            <div class="info">
+                <div class="title">Women Embellished Grosvenor Bracelet Style Square Dial Watch - 24000085 Olivia Burton</div>
+                <div><span class="price">₹3640</span> <span class="mrp">₹11375</span></div>
+                
+                <a href="https://inrdeals.com/esh416135721/https%3A//www.myntra.com/watches/olivia%2Bburton/olivia-burton-women-embellished-grosvenor-bracelet-style-square-dial-watch---24000085/30581624" class="btn myn" target="_blank">Buy on Myntra</a>
+            </div>
+        </div>
         <div class="card">
             <div class="thumb"><img src="https://assets.myntassets.com/h_200,w_200,c_fill,g_auto/h_1440,q_75,w_1080/v1/assets/images/24051740/2023/10/6/ca9050cf-0c73-4371-ba11-252273aa1c3e1696592385705-Hugo-Boss--Solgrade-Analog-Black-Sunray-Round-Dial-Mens-Watc-1.jpg" onerror="this.src='https://via.placeholder.com/100?text=No+Img'"></div>
             <div class="info">
