--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
     <div style="text-align:center; margin-bottom:20px; color:#555;">⚡ Last Update: 01:08</div>
     
         <div class="card">
+            <div class="thumb"><img src="https://assets.myntassets.com/h_200,w_200,c_fill,g_auto/h_1440,q_75,w_1080/v1/assets/images/26435472/2024/1/23/a2c566e9-24b0-4b22-bb30-2c1b985bc5061706003474104MVMTOdysseyIiAnalogBlueTonneauDialMensWatch-28000356-D1.jpg" onerror="this.src='https://via.placeholder.com/100?text=No+Img'"></div>
+            <div class="info">
+                <div class="title">Men Odyssey II Analogue Watch 28000356 MVMT</div>
+                <div><span class="price">₹4896</span> <span class="mrp">₹15795</span></div>
+                
+                <a href="https://inrdeals.com/esh416135721/https%3A//www.myntra.com/watches/mvmt/mvmt-men-odyssey-ii-analogue-watch-28000356/26435472" class="btn myn" target="_blank">Buy on Myntra</a>
+            </div>
+        </div>
+        <div class="card">
             <div class="thumb"><img src="https://assets.myntassets.com/h_200,w_200,c_fill,g_auto/h_1440,q_75,w_1080/v1/assets/images/30581624/2024/9/19/6faa1006-62d7-4822-b769-9ceaeb3c9c2c1726723419186-Olivia-Burton-Grosvenor-Qtz-Basic-Slim-Blush-Sunray-Square-D-1.jpg" onerror="this.src='https://via.placeholder.com/100?text=No+Img'"></div>
             <div class="info">
                 <div class="title">Women Embellished Grosvenor Bracelet Style Square Dial Watch - 24000085 Olivia Burton</div>
