--- a/index.html
+++ b/index.html
@@ -15,8 +15,17 @@
         .btn { display: block; background: #333; color: white; text-align: center; padding: 8px; border-radius: 5px; text-decoration: none; margin-top: 10px; font-weight: 600; }
         .amz { background: #ff9900; } .fk { background: #2874f0; } .myn { background: #ff3f6c; }
     </style></head><body>
-    <div style="text-align:center; margin-bottom:20px; color:#555;">⚡ Last Update: 01:08</div>
+    <div style="text-align:center; margin-bottom:20px; color:#555;">⚡ Last Update: 01:09</div>
     
+        <div class="card">
+            <div class="thumb"><img src="https://assets.myntassets.com/h_200,w_200,c_fill,g_auto/h_1440,q_75,w_1080/v1/assets/images/1445926/2016/8/3/11470208412065-Sonata-Ocean-Series-Men-Green-Digital-Watch-77053PP02-3121470208411439-1.jpg" onerror="this.src='https://via.placeholder.com/100?text=No+Img'"></div>
+            <div class="info">
+                <div class="title">Ocean Series Men Green Digital Watch 77053PP02 Sonata</div>
+                <div><span class="price">₹808</span> <span class="mrp">₹2449</span></div>
+                
+                <a href="https://inrdeals.com/esh416135721/https%3A//www.myntra.com/watches/sonata/sonata-ocean-series-men-green-digital-watch-77053pp02/1445926" class="btn myn" target="_blank">Buy on Myntra</a>
+            </div>
+        </div>
         <div class="card">
             <div class="thumb"><img src="https://assets.myntassets.com/h_200,w_200,c_fill,g_auto/h_1440,q_75,w_1080/v1/assets/images/26435472/2024/1/23/a2c566e9-24b0-4b22-bb30-2c1b985bc5061706003474104MVMTOdysseyIiAnalogBlueTonneauDialMensWatch-28000356-D1.jpg" onerror="this.src='https://via.placeholder.com/100?text=No+Img'"></div>
             <div class="info">
