--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
     <div style="text-align:center; margin-bottom:20px; color:#555;">⚡ Last Update: 01:09</div>
     
         <div class="card">
+            <div class="thumb"><img src="https://assets.myntassets.com/h_200,w_200,c_fill,g_auto/h_1440,q_75,w_1080/v1/assets/images/24051924/2023/9/20/bd816196-8bb2-43bf-83c4-8b66929d15131695209590001CalvinKleinMenImpressiveStainlessSteelBraceletStyleAnalogueM1.jpg" onerror="this.src='https://via.placeholder.com/100?text=No+Img'"></div>
+            <div class="info">
+                <div class="title">Men Impressive Stainless Steel Bracelet Style Analogue Multi Watch 25200293 Calvin Klein</div>
+                <div><span class="price">₹4712</span> <span class="mrp">₹14280</span></div>
+                
+                <a href="https://inrdeals.com/esh416135721/https%3A//www.myntra.com/watches/calvin%2Bklein/calvin-klein-men-impressive-stainless-steel-bracelet-style-analogue-multi-watch-25200293/24051924" class="btn myn" target="_blank">Buy on Myntra</a>
+            </div>
+        </div>
+        <div class="card">
             <div class="thumb"><img src="https://assets.myntassets.com/h_200,w_200,c_fill,g_auto/h_1440,q_75,w_1080/v1/assets/images/1445926/2016/8/3/11470208412065-Sonata-Ocean-Series-Men-Green-Digital-Watch-77053PP02-3121470208411439-1.jpg" onerror="this.src='https://via.placeholder.com/100?text=No+Img'"></div>
             <div class="info">
                 <div class="title">Ocean Series Men Green Digital Watch 77053PP02 Sonata</div>
