--- a/index.html
+++ b/index.html
@@ -15,8 +15,17 @@
         .btn { display: block; background: #333; color: white; text-align: center; padding: 8px; border-radius: 5px; text-decoration: none; margin-top: 10px; font-weight: 600; }
         .amz { background: #ff9900; } .fk { background: #2874f0; } .myn { background: #ff3f6c; }
     </style></head><body>
-    <div style="text-align:center; margin-bottom:20px; color:#555;">⚡ Last Update: 01:10</div>
+    <div style="text-align:center; margin-bottom:20px; color:#555;">⚡ Last Update: 01:11</div>
     
+        <div class="card">
+            <div class="thumb"><img src="https://assets.myntassets.com/h_200,w_200,c_fill,g_auto/h_1440,q_75,w_1080/v1/assets/images/2025/NOVEMBER/8/mVybHGpo_157887be1d3644f180942213318d7e5a.jpg" onerror="this.src='https://via.placeholder.com/100?text=No+Img'"></div>
+            <div class="info">
+                <div class="title">Aloe Vera Daily Cleansing Wipes with Cucumber & Vitamin E - 25 Wipes Lacto Calamine</div>
+                <div><span class="price">₹150</span> </div>
+                
+                <a href="https://inrdeals.com/esh416135721/https%3A//www.myntra.com/s/k/c/31682016%3Fsource%3DDefault%26is_retargeting%3Dtrue%26expires%3D1796951480%26signature%3DsUPs5bLO6-uA1nZ0G-QGNiVACxo1TfeRP58IWERGcZk%26deep_link_value%3Dmyntra%253A%252F%252Fmyntra.com%252F31682016%253Fsource%253DDefault%26c%3Ddw8kmhFjC8z2vLZzVYXfWp_p31695851" class="btn myn" target="_blank">Buy on Myntra</a>
+            </div>
+        </div>
         <div class="card">
             <div class="thumb"><img src="https://assets.myntassets.com/h_200,w_200,c_fill,g_auto/h_1440,q_75,w_1080/v1/assets/images/2025/MAY/30/rfbbY5t6_16838b28fb344e53908114cafa7e1944.jpg" onerror="this.src='https://via.placeholder.com/100?text=No+Img'"></div>
             <div class="info">
