--- a/index.html
+++ b/index.html
@@ -15,8 +15,17 @@
         .btn { display: block; background: #333; color: white; text-align: center; padding: 8px; border-radius: 5px; text-decoration: none; margin-top: 10px; font-weight: 600; }
         .amz { background: #ff9900; } .fk { background: #2874f0; } .myn { background: #ff3f6c; }
     </style></head><body>
-    <div style="text-align:center; margin-bottom:20px; color:#555;">⚡ Last Update: 01:11</div>
+    <div style="text-align:center; margin-bottom:20px; color:#555;">⚡ Last Update: 01:12</div>
     
+        <div class="card">
+            <div class="thumb"><img src="http://rukmini1.flixcart.com/image/300/300/xif0q/watch/s/z/p/-original-imahhx7ggy8ahq8b.jpeg" onerror="this.src='https://via.placeholder.com/100?text=No+Img'"></div>
+            <div class="info">
+                <div class="title">TIMEX Pink Dial Analog Watch  - For Women - Buy TIMEX Pink Dial Analog Watch  - For Women TWTL10103 Online at Best Prices in India | Flipkart.com</div>
+                <div><span class="price">₹319</span> </div>
+                
+                <a href="https://inrdeals.com/esh416135721/https%3A//www.flipkart.com/a/p/itm9edc1c0f0408d%3Fpid%3DWATFUQEWZYGUZZFE%26lid%3DLSTWATFUQEWZYGUZZFEHUB5KZ%26affid%3Dgrowthte%26affExtParam1%3DENKR20250907A1591186064%26affExtParam2%3D631129" class="btn fk" target="_blank">Buy on Flipkart</a>
+            </div>
+        </div>
         <div class="card">
             <div class="thumb"><img src="https://assets.myntassets.com/h_200,w_200,c_fill,g_auto/h_1440,q_75,w_1080/v1/assets/images/2025/NOVEMBER/8/mVybHGpo_157887be1d3644f180942213318d7e5a.jpg" onerror="this.src='https://via.placeholder.com/100?text=No+Img'"></div>
             <div class="info">
