--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
     <div style="text-align:center; margin-bottom:20px; color:#555;">⚡ Last Update: 01:13</div>
     
         <div class="card">
+            <div class="thumb"><img src="" onerror="this.src='https://via.placeholder.com/100?text=No+Img'"></div>
+            <div class="info">
+                <div class="title">Item Store Online - Buy Item Online at Best Price in India | Flipkart.com</div>
+                <div><span class="price">₹2138</span> </div>
+                
+                <a href="https://inrdeals.com/esh416135721/https%3A//www.flipkart.com/flipkart/p/item%3Fpid%3DWATG4ZUKF6M2MUFY%26affid%3Dgrowthte%26affExtParam1%3DENKR20250907A1591186064%26affExtParam2%3D631129" class="btn fk" target="_blank">Buy on Flipkart</a>
+            </div>
+        </div>
+        <div class="card">
             <div class="thumb"><img src="http://rukmini1.flixcart.com/image/300/300/xif0q/hand-messenger-bag/t/z/q/-original-imah87422hbhpyzn.jpeg" onerror="this.src='https://via.placeholder.com/100?text=No+Img'"></div>
             <div class="info">
                 <div class="title">Buy Caprese Women Maroon Tote Maroon Online @ Best Price in India | Flipkart.com</div>
