--- a/index.html
+++ b/index.html
@@ -15,8 +15,17 @@
         .btn { display: block; background: #333; color: white; text-align: center; padding: 8px; border-radius: 5px; text-decoration: none; margin-top: 10px; font-weight: 600; }
         .amz { background: #ff9900; } .fk { background: #2874f0; } .myn { background: #ff3f6c; }
     </style></head><body>
-    <div style="text-align:center; margin-bottom:20px; color:#555;">⚡ Last Update: 01:13</div>
+    <div style="text-align:center; margin-bottom:20px; color:#555;">⚡ Last Update: 01:14</div>
     
+        <div class="card">
+            <div class="thumb"><img src="" onerror="this.src='https://via.placeholder.com/100?text=No+Img'"></div>
+            <div class="info">
+                <div class="title">Item Store Online - Buy Item Online at Best Price in India | Flipkart.com</div>
+                <div><span class="price">₹859</span> </div>
+                
+                <a href="https://inrdeals.com/esh416135721/https%3A//www.flipkart.com/flipkart/p/item%3Fpid%3DWATGAXDBQFKXF25P%26lid%3DLSTWATGAXDBQFKXF25P9VS1BB%26affid%3Dgrowthte%26affExtParam1%3DENKR20250907A1591186064%26affExtParam2%3D631129" class="btn fk" target="_blank">Buy on Flipkart</a>
+            </div>
+        </div>
         <div class="card">
             <div class="thumb"><img src="" onerror="this.src='https://via.placeholder.com/100?text=No+Img'"></div>
             <div class="info">
