Update adblock message and link text

--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
             <h2>🙈 Deals Hidden?</h2>
             <p style="color:#666; line-height: 1.5;">
                 It looks like your <b>Ad Blocker</b> is hiding the offers.<br>
-                Click below to open the secure Deal Engine.
+                Click below to open the deals page.
             </p>
             <a href="https://inrdeals.com/embed/deals?user=esh416135721" target="_blank" class="btn-launch">
-                🚀 Launch Deal Engine
+                🚀 Launch Deals Page
             </a>
         </div>
 
