--- a/index.html
+++ b/index.html
@@ -3,83 +3,139 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unmissable Deals & Offers</title>
+    <title>Unmissable Deals | Best Offers Daily</title>
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+
     <style>
+        :root {
+            --primary: #2c3e50;       /* Deep Blue/Gray */
+            --accent: #ff9900;        /* Amazon/Deal Orange */
+            --bg-color: #f8f9fa;      /* Clean Off-White */
+            --text-dark: #1a1a1a;
+            --text-light: #666;
+            --shadow: 0 4px 20px rgba(0,0,0,0.08);
+        }
+
         body, html { 
             margin: 0; 
             padding: 0; 
             height: 100%; 
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; 
-            background: #f4f6f8; 
-            overflow-x: hidden; /* Prevent horizontal scroll */
+            font-family: 'Poppins', sans-serif; /* Modern Font */
+            background-color: var(--bg-color);
+            color: var(--text-dark);
+            overflow: hidden; /* Lock scroll to iframe only */
         }
 
-        /* Full Width Header */
+        /* --- HEADER DESIGN --- */
         .header {
-            background: #fff;
-            padding: 15px 20px;
-            text-align: center;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+            background: #ffffff;
+            height: 70px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 0 5%;
+            box-shadow: 0 2px 15px rgba(0,0,0,0.05);
             position: relative;
-            z-index: 10;
+            z-index: 100;
         }
-        .header h1 { margin: 0; color: #333; font-size: 1.5rem; }
+
+        .logo {
+            font-size: 1.4rem;
+            font-weight: 700;
+            color: var(--primary);
+            display: flex;
+            align-items: center;
+            gap: 8px;
+        }
         
-        /* Full Screen Container */
+        .logo span { color: var(--accent); }
+
+        .status-badge {
+            background: #e8f5e9;
+            color: #2ecc71;
+            padding: 5px 12px;
+            border-radius: 20px;
+            font-size: 0.8rem;
+            font-weight: 600;
+            display: flex;
+            align-items: center;
+            gap: 6px;
+        }
+        .dot { width: 8px; height: 8px; background: #2ecc71; border-radius: 50%; }
+
+        /* --- MAIN CONTAINER --- */
         .main-container {
             width: 100%;
-            height: calc(100vh - 120px); /* Fill remaining height */
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            height: calc(100vh - 70px); /* Fill rest of screen */
+            position: relative;
+            background: #fff;
         }
 
-        /* Seamless Iframe */
+        /* --- IFRAME STYLING --- */
         iframe {
             width: 100%;
             height: 100%;
             border: none;
             display: block;
-            background: #fff;
+            transition: opacity 0.5s ease;
         }
 
-        /* AdBlock Fallback Styling */
+        /* --- ADBLOCK FALLBACK CARD (Modern UI) --- */
         #adblock-view {
-            display: none; /* Hidden by default */
-            text-align: center;
-            padding: 40px;
+            display: none;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
             background: white;
-            border-radius: 12px;
-            box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-            max-width: 400px;
-        }
-        .btn-launch {
-            background: #ff9900;
-            color: white;
-            padding: 15px 30px;
-            text-decoration: none;
-            border-radius: 8px;
-            font-weight: bold;
-            font-size: 1.1rem;
-            display: inline-block;
-            margin-top: 15px;
-            transition: transform 0.2s;
-        }
-        .btn-launch:active { transform: scale(0.98); }
-
-        .footer {
+            padding: 40px;
+            border-radius: 16px;
+            box-shadow: var(--shadow);
             text-align: center;
-            padding: 10px;
-            color: #999;
-            font-size: 0.75rem;
-            background: #f4f6f8;
+            max-width: 400px;
+            width: 90%;
+        }
+
+        #adblock-view h2 { margin-top: 0; color: var(--primary); }
+        #adblock-view p { color: var(--text-light); line-height: 1.6; margin-bottom: 25px; }
+
+        .btn-launch {
+            background: linear-gradient(135deg, #ff9900 0%, #ff7700 100%);
+            color: white;
+            padding: 14px 30px;
+            text-decoration: none;
+            border-radius: 50px;
+            font-weight: 600;
+            font-size: 1rem;
+            display: inline-block;
+            box-shadow: 0 4px 15px rgba(255, 119, 0, 0.3);
+            transition: all 0.3s ease;
+        }
+
+        .btn-launch:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 6px 20px rgba(255, 119, 0, 0.4);
+        }
+
+        /* Mobile Tweaks */
+        @media (max-width: 600px) {
+            .header { padding: 0 15px; height: 60px; }
+            .logo { font-size: 1.2rem; }
+            .status-badge span { display: none; } /* Hide text on small screens */
+            .main-container { height: calc(100vh - 60px); }
         }
     </style>
 </head>
 <body>
 
     <div class="header">
-        <h1>⚡ Unmissable Deals</h1>
+        <div class="logo">⚡ Unmissable<span>Deals</span></div>
+        <div class="status-badge">
+            <div class="dot"></div> <span>Live Updates</span>
+        </div>
     </div>
 
     <div class="main-container">
@@ -91,20 +147,17 @@
         </iframe>
 
         <div id="adblock-view">
-            <h2>🙈 Deals Hidden?</h2>
-            <p style="color:#666; line-height: 1.5;">
-                It looks like your <b>Ad Blocker</b> is hiding the offers.<br>
-                Click below to open the deals page.
+            <div style="font-size: 3rem; margin-bottom: 10px;">🛡️</div>
+            <h2>Deals Protected</h2>
+            <p>
+                Your browser is blocking our deal engine.<br>
+                Don't worry, the offers are just one click away!
             </p>
             <a href="https://inrdeals.com/embed/deals?user=esh416135721" target="_blank" class="btn-launch">
-                🚀 Launch Deals Page
+                Open Deals Gallery 🚀
             </a>
         </div>
 
-    </div>
-
-    <div class="footer">
-        © 2025 Unmissable Deals • Managed by INRDeals
     </div>
 
     <script>
@@ -112,19 +165,18 @@
             var iframe = document.getElementById('dealFrame');
             var fallback = document.getElementById('adblock-view');
 
-            // Check if iframe actually loaded content
+            // 1.5 Second Check for AdBlock
             setTimeout(function() {
                 try {
-                    // If height is 0 or display is none, it was blocked
+                    // If iframe is hidden or height is 0, assume blocked
                     if (iframe.offsetHeight === 0 || window.getComputedStyle(iframe).display === 'none') {
                         throw new Error("Blocked");
                     }
                 } catch (e) {
-                    // Show friendly fallback
                     iframe.style.display = 'none';
                     fallback.style.display = 'block';
                 }
-            }, 1500); // Wait 1.5s for blocker to act
+            }, 1500);
         };
     </script>
 
